Fixed problem with card content overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 /* Positioning and Sizing */
 .card {
     width: 80%;
-    height: 60%;
+    height: 45em;
     margin: 2em;
 }
 
